# GISBasic

./: README.md
Code/Chaper10/: Example10-1.html  Example10-1.js  Example10-3-PickupBuilding.html  Example10-3-PickupBuilding.js
Code/Chaper6/Chaper6/: CMakeLists.txt
Code/Chaper6/Chaper6/Example10ContourLineMap/: CMakeLists.txt
Code/Chaper6/Chaper6/Example11IsoHeightMap/: CMakeLists.txt  Example11IsoHeightMap.cpp
Code/Chaper6/Chaper6/Example5DemResample/: CMakeLists.txt  Example5DemResample.cpp
Code/Chaper6/Chaper6/Example6Tin2Dem/: CMakeLists.txt
Code/Chaper6/Chaper6/Example7HillshadeMap/: CMakeLists.txt  Example7HillshadeMap.cpp
Code/Chaper6/Chaper6/Example8HillshadeMap/: CMakeLists.txt  Example8HillshadeMap.cpp
Code/Chaper6/Chaper6/Example9HillshadeMap/: CMakeLists.txt  Example9HillshadeMap.cpp
Code/Chaper7/: CMakeLists.txt
Code/Chaper7/Example10ObliqueIndexes/: CMakeLists.txt  Example10ObliqueIndexes.cpp
Code/Chaper7/Example1DemModel/: CMakeLists.txt  Example1DemModel.cpp
Code/Chaper7/Example2DemModel/: CMakeLists.txt  Example2DemModel.cpp
Code/Chaper7/Example3DemModel/: CMakeLists.txt  Example3DemModel.cpp
Code/Chaper7/Example8CreateBuilding/: CMakeLists.txt  Example8CreateBuilding.cpp
Code/Chaper7/Example9Osgb/: CMakeLists.txt
Code/Chaper9/: Example9-1-TwoDMap.html  Example9-1-TwoDMap.js  Example9-2-ThreeDMap.html  Example9-2-ThreeDMap.js  Example9-3-GeometryTransform.html  Example9-3-GeometryTransform.js  Example9-4-ThreeDGisScene.html  Example9-4-ThreeDGisScene.js
Code/JavaScriptWork/: Example7-7LoadBuilding.html  Example7-7LoadBuilding.js  server.js  wh.gltf
Cpp/: CMakeLists.txt
Cpp/Example10-3-GisBackend/: CMakeLists.txt  Example10-3-GisBackend.cpp
Cpp/Example3-1-SRS/: CMakeLists.txt  Example3-1-SRS.cpp
Cpp/Example3-2-SRSTmConvertor/: CMakeLists.txt  Example3-2-SRSTmConvertor.cpp
Cpp/Example3-3-WebMercatorConvertor/: CMakeLists.txt  Example3-3-WebMercatorConvertor.cpp
Cpp/Example3-4-BlhEcefGdal/: CMakeLists.txt  Example3-4-BlhEcefGdal.cpp
Cpp/Example3-5-BlhEcef/: CMakeLists.txt  Example3-5-BlhEcef.cpp
Cpp/Example3-6-EnuConvertor/: CMakeLists.txt  Example3-6-EnuConvertor.cpp
Cpp/Example4-1-VectorConvert/: CMakeLists.txt  Example4-1-VectorConvert.cpp
Cpp/Example4-10-PolygonTriangulation/: CMakeLists.txt  Example4-10-PolygonTriangulation.cpp
Cpp/Example4-2-SpatialRelation/: CMakeLists.txt  Example4-2-SpatialRelation.cpp
Cpp/Example4-3-CalPointFromLine/: CMakeLists.txt
Cpp/Example4-4-CalDistancePointAndLine/: CMakeLists.txt
Cpp/Example4-5-LineIntersection/: CMakeLists.txt  Example4-5-LineIntersection.cpp
Cpp/Example4-6-LineOrthogonIntersection/: CMakeLists.txt
Cpp/Example4-7-PointInTriangle/: CMakeLists.txt  Example4-7-PointInTriangle.cpp
Cpp/Example4-8-PointInPolygon/: CMakeLists.txt  Example4-8-PointInPolygon.cpp
Cpp/Example4-9-Points2Tin/: CMakeLists.txt  CMakePresets.json  Example4-9-Points2Tin.cpp
Cpp/Example5-1-RasterBase/: CMakeLists.txt  Example5-1-RasterBase.cpp
Cpp/Example5-10-Dilated/: CMakeLists.txt
Cpp/Example5-11-Erode/: CMakeLists.txt  Example5-11-Erode.cpp
Cpp/Example5-12-Harris/: CMakeLists.txt
Cpp/Example5-13-HeatMap/: CMakeLists.txt  Example5-13-HeatMap.cpp
Cpp/Example5-2-CreateRaster/: CMakeLists.txt  Example5-2-CreateRaster.cpp
Cpp/Example5-3-GeoInfo/: CMakeLists.txt  Example5-3-GeoInfo.cpp
Cpp/Example5-4-ReadAndWriteRaster/: CMakeLists.txt
Cpp/Example5-5-Pyramid/: CMakeLists.txt  Example5-5-Pyramid.cpp
Cpp/Example5-6-Resample/: CMakeLists.txt  Example5-6-Resample.cpp
Cpp/Example5-7-EqualizeHist/: CMakeLists.txt
Cpp/Example5-8-Gradient/: CMakeLists.txt
Cpp/Example5-9-Gaussian/: CMakeLists.txt  Example5-9-Gaussian.cpp
Cpp/Example6-1-DemReader/: CMakeLists.txt  Example6-1-DemReader.cpp
Cpp/Example6-10-ContourLineMap/: CMakeLists.txt  Example6-10-ContourLineMap.cpp
Cpp/Example6-11-IsoHeightMap/: CMakeLists.txt  Example6-11-IsoHeightMap.cpp
Cpp/Example6-2-DemWriter/: CMakeLists.txt  Example6-2-DemWriter.cpp
Cpp/Example6-3-Gird2Tin/: CMakeLists.txt  CMakePresets.json  Example6-3-Gird2Tin.cpp
Cpp/Example6-4-Gird2Tin/: CMakeLists.txt  Example6-4-Gird2Tin.cpp
Cpp/Example6-5-DemResample/: CMakeLists.txt  Example6-5-DemResample.cpp
Cpp/Example6-6-Tin2Dem/: CMakeLists.txt  Example6-6-Tin2Dem.cpp
Cpp/Example6-7-HillshadeMap/: CMakeLists.txt  Example6-7-HillshadeMap.cpp
Cpp/Example6-8-HillshadeMap/: CMakeLists.txt  Example6-8-HillshadeMap.cpp
Cpp/Example6-9-HillshadeMap/: CMakeLists.txt  Example6-9-HillshadeMap.cpp
Cpp/Example7-1-DemModel/: CMakeLists.txt  Example7-1-DemModel.cpp
Cpp/Example7-10-ObliqueIndexes/: CMakeLists.txt  Example7-10-ObliqueIndexes.cpp
Cpp/Example7-2-DemModel/: CMakeLists.txt  Example7-2-DemModel.cpp
Cpp/Example7-3-DemModel/: CMakeLists.txt  CMakePresets.json  Example7-3-DemModel.cpp
Cpp/Example7-8-CreateBuilding/: CMakeLists.txt  Example7-8-CreateBuilding.cpp
Cpp/Example7-9-Osgb/: CMakeLists.txt  Example7-9-Osgb.cpp
Data/Model/: wh.dbf  wh.shp  wh.shx
Data/Raster/: 26931.wld
Data/Vector/: Example10-2-Points.dbf  Example10-2-Points.shp  Example10-2-Points.shx  building.dbf  building.shx  multipolygons.dbf  multipolygons.shp  multipolygons.shx  points.dbf  points.shp  points.shx
JavaScript/: .gitattributes  Example10-4-PickupBuilding.html  Example10-4-PickupBuilding.js  Example7-7-LoadBuilding.html  Example7-7-LoadBuilding.js  Example8-1-WfsPost.html  Example8-2-WfsInsert.html  Example8-3-WfsReplace.html  Example8-4-WfsUpdate.html  Example8-5-WfsDelete.html  Example9-1-TwoDMap.html  Example9-1-TwoDMap.js  Example9-2-ThreeDMap.html  Example9-2-ThreeDMap.js  Example9-3-GeometryTransform.js  Example9-4-ThreeDGisScene.html  Example9-4-ThreeDGisScene.js  Example9-5-ThreeDGisScene.html  Example9-5-ThreeDGisScene.js  index.html  package.json  vite.config.js
JavaScript/lib/: Blh2Xyz.js  BuildingLayer.js  BuildingShader.js  LakeLayer.js  LakeMaterialGui.js  LakeShader.js  LakeUniforms.js  RayEllipsoid.js  SpatialCoordinateTransform.js
JavaScript/public/: LosAngelesBuildingEx.gltf  dom.jgw  lake1.ply  poi.geojson
(+3453 files in other folders)
